Update ETH_Price file and README for Imports

--- a/ETH_Price.ipynb
+++ b/ETH_Price.ipynb
@@ -12,7 +12,21 @@
     "import numpy as np\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('fivethirtyeight')"
+    "plt.style.use('fivethirtyeight')\n",
+    "from pypfopt.discrete_allocation import DiscreteAllocation, get_latest_prices\n",
+    "\n",
+    "#Import libraries from PyPortfolioOpt\n",
+    "from pypfopt.efficient_frontier import EfficientFrontier\n",
+    "from pypfopt import risk_models\n",
+    "from pypfopt import expected_returns\n",
+    "\n",
+    "#Import modules for plotting\n",
+    "import copy\n",
+    "from pypfopt import risk_models, exceptions\n",
+    "from pypfopt import EfficientFrontier, CLA\n",
+    "from pypfopt import plotting\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "import warnings"
    ]
   },
   {
@@ -550,25 +564,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Import libraries from PyPortfolioOpt\n",
-    "from pypfopt.efficient_frontier import EfficientFrontier\n",
-    "from pypfopt import risk_models\n",
-    "from pypfopt import expected_returns\n",
-    "#Import modules for plotting\n",
-    "import copy\n",
-    "from pypfopt import risk_models, exceptions\n",
-    "from pypfopt import EfficientFrontier, CLA\n",
-    "from pypfopt import plotting\n",
-    "import scipy.cluster.hierarchy as sch\n",
-    "import warnings"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -625,7 +620,6 @@
    ],
    "source": [
     "#Get the Discrete Allocation  of each share per stock\n",
-    "from pypfopt.discrete_allocation import DiscreteAllocation, get_latest_prices\n",
     "\n",
     "latest_prices = get_latest_prices(stocks_df)\n",
     "weights = cleaned_weights\n",
@@ -707,7 +701,6 @@
    ],
    "source": [
     "#Get the Discrete Allocation  of each share per stock (Efficient Risk; Volatility =  27.5%)\n",
-    "from pypfopt.discrete_allocation import DiscreteAllocation, get_latest_prices\n",
     "\n",
     "latest_prices = get_latest_prices(stocks_df)\n",
     "weights = cleaned_weights\n",
@@ -824,7 +817,6 @@
    ],
    "source": [
     "#Get the Discrete Allocation  of each share per stock\n",
-    "from pypfopt.discrete_allocation import DiscreteAllocation, get_latest_prices\n",
     "\n",
     "latest_prices = get_latest_prices(stocks_df)\n",
     "weights = cleaned_weights\n",
@@ -943,7 +935,6 @@
    ],
    "source": [
     "#Get the Discrete Allocation  of each share per stock (Efficient Risk; Volatility =  30%\n",
-    "from pypfopt.discrete_allocation import DiscreteAllocation, get_latest_prices\n",
     "\n",
     "latest_prices = get_latest_prices(stocks_df)\n",
     "weights = cleaned_weights\n",
